# workme

./: Cargo.toml  README.md
src/: arguments.rs  exercises.db  main.rs  user.db  workout.rs
src/workout/: body_section.rs  exercise.rs  settings.txt
